[package]
name = "game_dev"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
